--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,3 +1,3 @@
 # suppress inspection "UnusedProperty" for whole file
-spring.data.mongodb.uri=mongodb://localhost:27017/ignitr
+# spring.data.mongodb.uri=mongodb://localhost:27017/ignitr
 springdoc.swagger-ui.url=/openapi/ignitr.yaml
