Added module for Reasons, and relative tests. Added utils for string and log formatting. Now using provided Lombok.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 # suppress inspection "UnusedProperty" for whole file
 spring.profiles.active=dev
 springdoc.api-docs-enabled=false
+server.servlet.context-path=/api
