Added integration for ignitr-scorer. Changed the tree building logic.

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -3,3 +3,4 @@
 springdoc.swagger-ui.url=/openapi/ignitr.yaml
 logging.level.root=INFO
 logging.level.dev.ignitr.ignitrbackend=DEBUG
+scoring.service.base-url=http://localhost:3000/api
