--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,5 @@
 spring.profiles.active=dev
 springdoc.api-docs-enabled=false
 server.servlet.context-path=/api
+resttemplate.connect-timeout=5000
+resttemplate.read-timeout=5000
