--- a/src/main/resources/static/openapi/ignitr.yaml
+++ b/src/main/resources/static/openapi/ignitr.yaml
@@ -1,21 +1,26 @@
 openapi: 3.0.3
 info:
   title: Ignitr API
-  version: 1.0.0
+  version: 0.1.0
+  description: API for managing Sparks and their associated Reasons.
+
+servers:
+  - url: /api
+    description: Base API path
 
 tags:
-  - name: Health
-    description: System health checks
+  - name: System
+    description: System-level operations
   - name: Sparks
     description: Operations for managing Sparks
   - name: Reasons
     description: Operations for managing Reasons attached to Sparks
 
 paths:
-  /api/health:
+  /health:
     get:
       tags:
-        - Health
+        - System
       summary: Health check
       description: Returns OK if the service is running.
       responses:
@@ -27,7 +32,7 @@ paths:
                 type: string
                 example: OK
 
-  /api/sparks:
+  /sparks:
 
     get:
       tags:
@@ -114,7 +119,7 @@ paths:
               schema:
                 $ref: '#/components/schemas/ApiError'
 
-  /api/sparks/{id}:
+  /sparks/{id}:
     get:
       tags:
         - Sparks
@@ -264,7 +269,7 @@ paths:
               schema:
                 $ref: '#/components/schemas/ApiError'
 
-  /api/sparks/{parentId}/children:
+  /sparks/{parentId}/children:
     get:
       tags:
         - Sparks
@@ -336,7 +341,7 @@ paths:
               schema:
                 $ref: '#/components/schemas/ApiError'
 
-  /api/sparks/{id}/tree:
+  /sparks/{id}/tree:
     get:
       tags:
         - Sparks
@@ -363,7 +368,7 @@ paths:
               schema:
                 $ref: '#/components/schemas/ApiError'
 
-  /api/sparks/{sparkId}/reasons:
+  /sparks/{sparkId}/reasons:
     get:
       tags:
         - Reasons
@@ -477,7 +482,7 @@ paths:
               schema:
                 $ref: '#/components/schemas/ApiError'
 
-  /api/sparks/{sparkId}/reasons/{reasonId}:
+  /sparks/{sparkId}/reasons/{reasonId}:
     get:
       tags:
         - Reasons
