Update health endpoint path to /system/health

--- a/src/main/resources/static/openapi/ignitr.yaml
+++ b/src/main/resources/static/openapi/ignitr.yaml
@@ -17,7 +17,7 @@ tags:
     description: Operations for managing Reasons attached to Sparks
 
 paths:
-  /health:
+  /system/health:
     get:
       tags:
         - System
