Update application properties for local profile and rename RestTemplate settings

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,5 @@
 # suppress inspection "UnusedProperty" for whole file
-spring.profiles.active=dev
-springdoc.api-docs-enabled=false
+spring.profiles.active=local
 server.servlet.context-path=/api
-resttemplate.connect-timeout=5000
-resttemplate.read-timeout=5000
+restclient.connect-timeout=5000
+restclient.read-timeout=5000
