--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,6 +1,6 @@
 # suppress inspection "UnusedProperty" for whole file
-# spring.data.mongodb.uri=mongodb://localhost:27017/ignitr
-springdoc.swagger-ui.url=/openapi/ignitr.yaml
 logging.level.root=INFO
 logging.level.dev.ignitr.ignitrbackend=DEBUG
-scoring.service.base-url=http://localhost:3000/api
+spring.mongodb.uri=mongodb://localhost:27017/ignitr
+ignitr.scorer.url=http://localhost:3000/api
+springdoc.swagger-ui.url=/openapi/ignitr.yaml
