--- a/src/main/resources/static/openapi/ignitr.yaml
+++ b/src/main/resources/static/openapi/ignitr.yaml
@@ -660,6 +660,8 @@ components:
           type: string
         description:
           type: string
+        score:
+            type: integer
         createdAt:
           type: string
           format: date-time
