--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,10 +8,14 @@ services:
     volumes:
       - mongo-data:/data/db
     healthcheck:
-      test: ["CMD-SHELL", "mongosh --quiet --eval 'db.runCommand({ ping: 1 })' localhost:27017/test || exit 1"]
-      interval: 10s
+      test:
+        [
+          "CMD-SHELL",
+          "mongosh --quiet --eval 'db.runCommand({ ping: 1 })' localhost:27017/test || exit 1"
+        ]
+      interval: 30s
       timeout: 5s
-      retries: 10
+      retries: 3
 
   ignitr-scorer:
     build:
@@ -49,6 +53,16 @@ services:
         condition: service_healthy
       ignitr-scorer:
         condition: service_healthy
+    healthcheck:
+      test:
+        [
+          "CMD-SHELL",
+          "curl -fsS http://localhost:8080/api/system/health >/dev/null || exit 1"
+        ]
+      interval: 30s
+      timeout: 5s
+      retries: 3
+      start_period: 20s
 
 volumes:
   mongo-data:
