--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -4,3 +4,4 @@ logging.level.dev.ignitr.ignitrbackend=DEBUG
 spring.mongodb.uri=mongodb://localhost:27017/ignitr
 ignitr.scorer.url=http://localhost:3000/api
 springdoc.swagger-ui.url=/openapi/ignitr.yaml
+server.port=8080
