Update application properties for dev environment, fix Dockerfile variable syntax, and handle potential null parentId in SparkScoreMapper

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # suppress inspection "UnusedProperty" for whole file
-spring.profiles.active=local
+spring.profiles.active=dev
 server.servlet.context-path=/api
 restclient.connect-timeout=5000
 restclient.read-timeout=5000
