--- a/src/main/resources/static/openapi/ignitr.yaml
+++ b/src/main/resources/static/openapi/ignitr.yaml
@@ -389,6 +389,50 @@ paths:
               schema:
                 $ref: '#/components/schemas/ApiError'
 
+  /sparks/trees:
+    get:
+      tags:
+        - Sparks
+      summary: Get paginated spark trees
+      description: Returns paginated spark trees for the provided parentId (or root-level trees when parentId is omitted).
+      parameters:
+        - name: parentId
+          in: query
+          required: false
+          schema:
+            type: string
+          description: Optional parent ObjectId. When omitted, returns top-level trees; when provided, returns trees whose parent matches the given id.
+        - name: page
+          in: query
+          required: false
+          schema:
+            type: integer
+            minimum: 0
+            default: 0
+          description: Page index (0-based).
+        - name: size
+          in: query
+          required: false
+          schema:
+            type: integer
+            minimum: 1
+            maximum: 100
+            default: 20
+          description: Page size. Values outside range are clamped server-side.
+      responses:
+        '200':
+          description: Paginated spark trees returned successfully.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/SparkTreePage'
+        '400':
+          description: Validation error (invalid parentId or pagination params).
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ApiError'
+
   /sparks/{sparkId}/reasons:
     get:
       tags:
@@ -693,6 +737,33 @@ components:
           type: array
           items:
             $ref: '#/components/schemas/SparkTree'
+    SparkTreePage:
+      type: object
+      description: Paginated result containing SparkTree DTOs.
+      properties:
+        content:
+          type: array
+          items:
+            $ref: '#/components/schemas/SparkTree'
+        page:
+          type: integer
+          example: 0
+        size:
+          type: integer
+          example: 20
+        totalElements:
+          type: integer
+          example: 2
+        totalPages:
+          type: integer
+          example: 1
+      required:
+        - content
+        - page
+        - size
+        - totalElements
+        - totalPages
+
     SparkPage:
       type: object
       description: Paginated result containing Spark objects. `page` is zero-based.
@@ -841,3 +912,4 @@ components:
         - code
         - message
         - path
+
